--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -2,7 +2,7 @@
   <ul>
     <a routerLink="/"><li>Home</li></a>
     <a routerLink="cursos"><li>Cursos</li></a>
-    <a routerLink="contato"><li>Fale Conosco</li></a>
+    <a routerLink="contato"><li>Contato</li></a>
     <a routerLink="login"><li>Login</li></a>
   </ul>
 </div>
