desenvolve componentes listar-cursos, deletar-curso, criar-curso, desenvolve templates das páginas contato e login e cria CursosService

--- a/src/app/components/cursos/criar-curso/criar-curso.component.scss
+++ b/src/app/components/cursos/criar-curso/criar-curso.component.scss
@@ -7,7 +7,12 @@
     width: 60%;
   }
 
-  .button {
+  .buttons {
     margin-top: 2rem;
+    display: inline-flex;
+
+    com-button {
+      margin-right: 1rem;
+    }
   }
 }
