--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="logo">
     <a href="/">
-      <img src="/assets/png/juno-logo.png" />
+      <img src="/assets/png/output-onlinepngtools.png" />
     </a>
   </div>
   <app-nav></app-nav>
