--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<div class="container">
+    <div class="form">
+        <com-form>
+            <com-form-section block formTitle="Login">
+            <com-input style="width: 100%" label="Username"></com-input>
+            <com-input style="width: 100%" label="Senha"></com-input>
+            </com-form-section>
+            <com-form-section block>
+                <com-button fill form="formId">
+                    <ng-container slot="text">Entrar</ng-container>
+                </com-button>
+            </com-form-section>
+        </com-form>
+    </div>
+</div>
