--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,16 +1,12 @@
 <div class="card">
-  <com-card headerTitle="Curso Angular 9">
+  <com-card [headerTitle]="curso.nome">
     <span
-      >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      vestibulum tincidunt malesuada. Donec lacinia gravida turpis sollicitudin
-      laoreet. Duis eleifend dui eget risus blandit pretium.</span
-    >
-    <com-accordion class="accordion">
-      <com-accordion-item headerTitle="Detalhes">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-        vestibulum tincidunt malesuada. Donec lacinia gravida turpis
-        sollicitudin laoreet. Duis eleifend dui eget risus blandit pretium.
-      </com-accordion-item>
-    </com-accordion>
+      >{{ curso.descricao }}</span>
+
+    <div slot="footer" class="icons">
+      <a><com-icon>info</com-icon></a>
+      <a routerLink="/cursos/deletar/{{ curso.idCurso }}"><com-icon>delete</com-icon></a>
+      <a><com-icon>edit</com-icon></a>
+    </div>
   </com-card>
 </div>
