--- a/src/app/shared/card/card.component.scss
+++ b/src/app/shared/card/card.component.scss
@@ -6,4 +6,17 @@
     margin-top: 2rem;
     width: 50rem;
   }
+
+  .icons {
+    display: flex;
+    justify-content: center;
+
+    a {
+      margin-right: 1rem;
+    }
+
+    a:hover {
+      color: var(--grey);
+    }
+  }
 }
