desenvolve o componente editar-curso

--- a/src/app/components/cursos/listar-cursos/listar-cursos.component.html
+++ b/src/app/components/cursos/listar-cursos/listar-cursos.component.html
@@ -9,8 +9,8 @@
   </div>
 
   <div class="list">
-    <ul>
-      <li *ngFor="let curso of cursos"><app-card [curso]="curso"></app-card></li>
-    </ul>
+    <div class="card" *ngFor="let curso of cursos">
+      <app-card [curso]="curso"></app-card>
+    </div>
   </div>
 </div>
