--- a/src/app/components/cursos/listar-cursos/listar-cursos.component.scss
+++ b/src/app/components/cursos/listar-cursos/listar-cursos.component.scss
@@ -9,13 +9,13 @@
   }
 
   .list {
-    display: flex;
-    justify-content: center;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 
-    ul {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
+    .card {
+      width: calc((100% - 6rem) / 3);
+      margin: 1rem;
     }
   }
 }
