cria componente footer, desenvolve componente home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
         <div class="review">
             <div class="img"><img src="assets/png/profile.png"></div>
             <div class="text">
-                <h2>"A experiência com a Juno é muito boa: a equipe consegue estar sempre atualizada sobre as novas tecnologias, agregar conhecimentos e se aperfeiçoar. O acompanhamento mensal da equipe ajudou bastante, tanto como os relatórios gerenciais da plataforma. O time conseguiu aprender muito e um dos diferenciais para nós foi a língua."</h2>
+                <h2>"A experiência com a Juno é muito boa: a equipe consegue estar sempre atualizada sobre as novas tecnologias, agregar conhecimentos e se aperfeiçoar. O acompanhamento mensal da equipe ajudou bastante, tanto como os relatórios gerenciais da plataforma."</h2>
                 <h3>Roberto de Oliveira</h3>
             </div>
         </div>
