--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -14,23 +14,31 @@
 
 .reviews {
   .review {
-    margin: 5rem;
     display: flex;
-    align-content: center;
+    align-items: center;
+    margin: 5rem;
+    height: 15rem;
 
     .img {
+      width: 10%;
       margin-right: 2rem;
-      height: 20rem;
-      width: 20rem;
+
+      img {
+        border-radius: 50%;
+      }
     }
 
-    h2 {
-      font-size: 24px;
-    }
-    h3 {
-      font-size: 24px;
-      font-weight: bold;
-      margin-top: 1rem;
+    .text {
+      width: 90%;
+
+      h2 {
+        font-size: 24px;
+      }
+      h3 {
+        font-size: 24px;
+        font-weight: bold;
+        margin-top: 1rem;
+      }
     }
   }
 }
