--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -30,14 +30,16 @@
 </section>
 
 <section class="patrocinadores">
-    <ul class="container">
-        <li><com-icon size="12.8" color="#202124">face</com-icon></li>   
-        <li><com-icon size="12.8" color="#202124">home</com-icon></li>
-        <li><com-icon size="12.8" color="#202124">more</com-icon></li>
-        <li><com-icon size="12.8" color="#202124">shop</com-icon></li>
-        <li><com-icon size="12.8" color="#202124">camera</com-icon></li>
-        <li><com-icon size="12.8" color="#202124">book</com-icon></li>
-        <li><com-icon size="12.8" color="#202124">eject</com-icon></li>
-        <li><com-icon size="12.8" color="#202124">flag</com-icon></li>
-    </ul>
+    <div class="container">
+        <ul>
+            <li><com-icon size="12.4" color="#202124">face</com-icon></li>   
+            <li><com-icon size="12.4" color="#202124">home</com-icon></li>
+            <li><com-icon size="12.4" color="#202124">more</com-icon></li>
+            <li><com-icon size="12.4" color="#202124">shop</com-icon></li>
+            <li><com-icon size="12.4" color="#202124">camera</com-icon></li>
+            <li><com-icon size="12.4" color="#202124">book</com-icon></li>
+            <li><com-icon size="12.4" color="#202124">eject</com-icon></li>
+            <li><com-icon size="12.4" color="#202124">flag</com-icon></li>
+        </ul>
+    </div>
 </section>
