--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,17 +1,20 @@
-<footer class="footer">
+<footer>
     <div class="container">
-        <div class="endereco">
+        <div class="footer-endereco">
             <p>faleconosco@juno.com</p>
             <p><a href="tel:5521999999999">(21) 99999-9999</a></p>
             <br>
             <p>22010-060 Ladeira do Ari Barroso, 876 - Leme</p>
             <p>Rio de Janeiro, RJ</p>
         </div>
-        <div class="social">
-            <ul class="list">
-                <li><com-icon size="4.8" color="#202124">facebook</com-icon></li>
-                <li><com-icon size="4.8" color="#202124">facebook</com-icon></li>
-                <li><com-icon size="4.8" color="#202124">facebook</com-icon></li>
+        <div class="footer-social">
+            <ul>
+                <li><a href="">
+                    <com-icon size="4.8" color="#202124">facebook</com-icon></a></li>
+                <li><a href="">
+                    <com-icon size="4.8" color="#202124">facebook</com-icon></a></li>
+                <li><a href="">
+                    <com-icon size="4.8" color="#202124">facebook</com-icon></a></li>
             </ul>
         </div>
     </div>
