--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,8 +1,10 @@
 <header class="header">
-  <div class="logo">
-    <a href="/">
-      <img src="/assets/png/output-onlinepngtools.png" />
-    </a>
+  <div class="container">
+    <div class="header-logo">
+      <a href="/">
+        <img src="/assets/png/output-onlinepngtools.png" />
+      </a>
+    </div>
+    <div class="header-nav"><app-nav></app-nav></div>
   </div>
-  <app-nav></app-nav>
 </header>
