--- a/src/app/components/contato/contato.component.scss
+++ b/src/app/components/contato/contato.component.scss
@@ -1,10 +1,13 @@
 .container {
-  padding: 3rem 6rem 3rem 6rem;
+  max-width: 1140px;
+  padding: 3rem 0;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
+  align-items: center;
 
   .form {
-    width: 60%;
+    width: 80%;
   }
 
   .button {
