--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,9 +1,12 @@
 .container {
-  padding: 3rem 6rem 3rem 6rem;
+  max-width: 1140px;
+  padding: 3rem 0;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
+  align-items: center;
 
   .form {
-    width: 30%;
+    width: 50%;
   }
 }
