--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,13 +1,25 @@
 .header {
   background-color: #234b90;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 3rem 6rem 3rem 6rem;
 
-  .logo {
-    img {
-      width: 30%;
+  .container {
+    max-width: 1140px;
+    padding: 3rem 0;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+
+    .header-logo {
+      margin: 1rem;
+
+      img {
+        width: 30%;
+      }
+    }
+
+    .header-nav {
+      margin: 1rem;
     }
   }
 }
