--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -1,8 +1,8 @@
-<div class="nav">
+<nav>
   <ul>
-    <a routerLink="/"><li>Home</li></a>
-    <a routerLink="cursos"><li>Cursos</li></a>
-    <a routerLink="contato"><li>Contato</li></a>
-    <a routerLink="login"><li>Login</li></a>
+    <li><a routerLink="/">Home</a></li>
+    <li><a routerLink="cursos">Cursos</a></li>
+    <li><a routerLink="contato">Contato</a></li>
+    <li><a routerLink="login">Login</a></li>
   </ul>
-</div>
+</nav>
