--- a/src/app/layout/nav/nav.component.scss
+++ b/src/app/layout/nav/nav.component.scss
@@ -1,13 +1,20 @@
-.nav {
+nav {
   ul {
+    font-size: 16px;
+
     li {
       display: inline;
       text-transform: uppercase;
-      margin: 0 0 0 3rem;
     }
+
+    li:not(:last-child) {
+      margin-right: 3rem;
+    }
+
     a {
       color: var(--lighter-grey);
     }
+
     a:hover {
       color: var(--light-grey);
     }
