--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -10,12 +10,16 @@
         <div class="footer-social">
             <ul>
                 <li><a href="">
-                    <com-icon size="4.8" color="#202124">facebook</com-icon></a></li>
+                    <com-icon>facebook</com-icon></a></li>
                 <li><a href="">
-                    <com-icon size="4.8" color="#202124">facebook</com-icon></a></li>
+                    <com-icon>facebook</com-icon></a></li>
                 <li><a href="">
-                    <com-icon size="4.8" color="#202124">facebook</com-icon></a></li>
+                    <com-icon>facebook</com-icon></a></li>
             </ul>
         </div>
     </div>
 </footer>
+
+<!-- size="4.8" color="#202124"
+size="4.8" color="#202124"
+size="4.8" color="#202124" -->
