--- a/src/app/components/cursos/listar-cursos/listar-cursos.component.scss
+++ b/src/app/components/cursos/listar-cursos/listar-cursos.component.scss
@@ -10,14 +10,13 @@
     margin-bottom: 3rem;
   }
 
-  .list {
+  ul {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
 
-    .card {
-      width: calc((100% - 6rem) / 3);
+    li {
       margin: 1rem;
+      flex: 1 1 400px;
     }
   }
 }
