--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -32,14 +32,24 @@
 <section class="patrocinadores">
     <div class="container">
         <ul>
-            <li><com-icon size="12.4" color="#202124">face</com-icon></li>   
-            <li><com-icon size="12.4" color="#202124">home</com-icon></li>
-            <li><com-icon size="12.4" color="#202124">more</com-icon></li>
-            <li><com-icon size="12.4" color="#202124">shop</com-icon></li>
-            <li><com-icon size="12.4" color="#202124">camera</com-icon></li>
-            <li><com-icon size="12.4" color="#202124">book</com-icon></li>
-            <li><com-icon size="12.4" color="#202124">eject</com-icon></li>
-            <li><com-icon size="12.4" color="#202124">flag</com-icon></li>
+            <li><com-icon>face</com-icon></li>   
+            <li><com-icon>home</com-icon></li>
+            <li><com-icon>more</com-icon></li>
+            <li><com-icon>shop</com-icon></li>
+            <li><com-icon>camera</com-icon></li>
+            <li><com-icon>book</com-icon></li>
+            <li><com-icon>eject</com-icon></li>
+            <li><com-icon>flag</com-icon></li>
         </ul>
     </div>
 </section>
+
+
+<!-- size="12.4" color="#202124"
+size="12.4" color="#202124"
+size="12.4" color="#202124"
+size="12.4" color="#202124"
+size="12.4" color="#202124"
+size="12.4" color="#202124"
+size="12.4" color="#202124"
+size="12.4" color="#202124" -->
