--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -20,12 +20,16 @@
 .reviews {
   .review {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     margin: 1rem;
+    justify-content: center;
 
     .img {
-      width: 10%;
-      margin-right: 2rem;
+      flex: 1 1 30px;
+      min-width: 100px;
+      max-width: 100px;
+      margin: 0 2rem 2rem;
 
       img {
         border-radius: 50%;
@@ -33,7 +37,7 @@
     }
 
     .text {
-      width: 90%;
+      flex: 3 1 800px;
 
       h2 {
         font-size: 24px;
@@ -60,12 +64,12 @@
     flex-wrap: wrap;
     margin: 1rem;
 
-    li:not(:nth-child(1n + 5)) {
-      margin-bottom: 5rem;
-    }
+    // li:not(:nth-child(1n + 5)) {
+    //   margin-bottom: 5rem;
+    // }
 
-    li:not(:nth-child(4n)) {
-      margin-right: calc((100% - (12.4rem * 4)) / 3);
-    }
+    // li:not(:nth-child(4n)) {
+    //   margin-right: calc((100% - (12.4rem * 4)) / 3);
+    // }
   }
 }
