ajuste nos módulos

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,23 +1,26 @@
 <footer>
-    <div class="container">
-        <div class="footer-endereco">
-            <p>faleconosco@juno.com</p>
-            <p><a href="tel:5521999999999">(21) 99999-9999</a></p>
-            <br>
-            <p>22010-060 Ladeira do Ari Barroso, 876 - Leme</p>
-            <p>Rio de Janeiro, RJ</p>
-        </div>
-        <div class="footer-social">
-            <ul>
-                <li><a href="">
-                    <com-icon>facebook</com-icon></a></li>
-                <li><a href="">
-                    <com-icon>facebook</com-icon></a></li>
-                <li><a href="">
-                    <com-icon>facebook</com-icon></a></li>
-            </ul>
-        </div>
+  <div class="container">
+    <div class="footer-endereco">
+      <p>faleconosco@juno.com</p>
+      <p><a href="tel:5521999999999">(21) 99999-9999</a></p>
+      <br />
+      <p>22010-060 Ladeira do Ari Barroso, 876 - Leme</p>
+      <p>Rio de Janeiro, RJ</p>
     </div>
+    <div class="footer-social">
+      <ul>
+        <li>
+          <a href=""> <com-icon>facebook</com-icon></a>
+        </li>
+        <li>
+          <a href=""> <com-icon>facebook</com-icon></a>
+        </li>
+        <li>
+          <a href=""> <com-icon>facebook</com-icon></a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </footer>
 
 <!-- size="4.8" color="#202124"
