--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header-logo">
       <a href="/">
-        <img src="/assets/png/output-onlinepngtools.png" />
+        <img src="/assets/png/juno-logo.png" />
       </a>
     </div>
     <div class="header-nav"><app-nav></app-nav></div>
