--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -3,6 +3,6 @@
     <li><a routerLink="/">Home</a></li>
     <li><a routerLink="cursos">Cursos</a></li>
     <li><a routerLink="contato">Contato</a></li>
-    <li><a routerLink="login">Login</a></li>
+    <li *ngIf="!logged"><a routerLink="login">Login</a></li>
   </ul>
 </nav>
