--- a/src/app/modules/cursos/containers/listar-cursos/listar-cursos.component.html
+++ b/src/app/modules/cursos/containers/listar-cursos/listar-cursos.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="button">
+  <div class="button" *ngIf="logged">
     <a routerLink="criar">
       <com-button fill>
         <com-icon slot="icon">add</com-icon>
