--- a/src/app/modules/home/container/home.component.html
+++ b/src/app/modules/home/container/home.component.html
@@ -8,7 +8,7 @@
       <div class="img"><img src="assets/png/profile.png" /></div>
       <div class="text">
         <h2>
-          "A experiência com a Juno é muito boa: a equipe consegue estar sempre
+          "A experiência com a Teste é incrível: a equipe consegue estar sempre
           atualizada sobre as novas tecnologias, agregar conhecimentos e se
           aperfeiçoar. O acompanhamento mensal da equipe ajudou bastante, tanto
           como os relatórios gerenciais da plataforma."
@@ -21,10 +21,10 @@
       <div class="text">
         <h2>
           "Passei dois anos e meio desempregado e foi onde conheci os cursos da
-          Juno. Consegui fazer uma mudança de carreira em uma área muito
+          Teste. Consegui fazer uma mudança de carreira em uma área muito
           disputada e estou muito feliz: passei em um processo seletivo como
           Agente de Inovação, e muito do que aprendi tanto para a prova quanto
-          para a etapa presencial foi graças a Juno."
+          para a etapa presencial foi graças a Teste."
         </h2>
         <h3>Victor Moreira</h3>
       </div>
@@ -36,7 +36,7 @@
           "A plataforma é incrível. Além das metodologias do curso serem de
           alcance para quem está começando ou quem já está avançado em alguma
           tecnologia, no fórum de dúvidas sempre algum instrutor ou aluno te
-          responde em um curto espaço de tempo. Na Juno, seu conhecimento é
+          responde em um curto espaço de tempo. Na Teste, seu conhecimento é
           prioridade."
         </h2>
         <h3>Amanda Cardoso</h3>
@@ -48,14 +48,14 @@
 <section class="patrocinadores">
   <div class="container">
     <ul>
-      <li><com-icon>face</com-icon></li>
-      <li><com-icon>home</com-icon></li>
-      <li><com-icon>more</com-icon></li>
-      <li><com-icon>shop</com-icon></li>
-      <li><com-icon>camera</com-icon></li>
-      <li><com-icon>book</com-icon></li>
-      <li><com-icon>eject</com-icon></li>
-      <li><com-icon>flag</com-icon></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
     </ul>
   </div>
 </section>
