--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,9 @@
 .background {
   background-color: #f1f4f8;
 }
+
+// app-footer {
+//   position: absolute;
+//   bottom: 0px;
+//   width: 100%;
+// }
