--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <div class="footer-endereco">
-      <p>faleconosco@juno.com</p>
+      <p><a href="mailto:faleconosco@teste.com">faleconosco@teste.com</a></p>
       <p><a href="tel:5521999999999">(21) 99999-9999</a></p>
       <br />
       <p>22010-060 Ladeira do Ari Barroso, 876 - Leme</p>
@@ -10,13 +10,19 @@
     <div class="footer-social">
       <ul>
         <li>
-          <a href=""> <com-icon>facebook</com-icon></a>
+          <a href="">
+            <com-icon size="4.8" color="#202124">facebook</com-icon></a
+          >
         </li>
         <li>
-          <a href=""> <com-icon>facebook</com-icon></a>
+          <a href="">
+            <com-icon size="4.8" color="#202124">facebook</com-icon></a
+          >
         </li>
         <li>
-          <a href=""> <com-icon>facebook</com-icon></a>
+          <a href="">
+            <com-icon size="4.8" color="#202124">facebook</com-icon></a
+          >
         </li>
       </ul>
     </div>
