--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,8 @@
   <div class="container">
     <div class="header-logo">
       <a href="/">
-        <img src="/assets/png/juno-logo.png" />
+        <h1>Teste</h1>
+        <!-- <img src="/assets/png/juno-logo.png" /> -->
       </a>
     </div>
     <div class="header-nav"><app-nav></app-nav></div>
