--- a/src/app/modules/cursos/containers/listar-cursos/listar-cursos.component.scss
+++ b/src/app/modules/cursos/containers/listar-cursos/listar-cursos.component.scss
@@ -17,6 +17,19 @@
     li {
       margin: 1rem;
       flex: 1 1 400px;
+
+      .icons {
+        display: flex;
+        justify-content: center;
+
+        a {
+          margin-right: 1rem;
+        }
+
+        a:hover {
+          color: var(--grey);
+        }
+      }
     }
   }
 }
