cria componente detalhes-curso

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -29,6 +29,4 @@
   </div>
 </footer>
 
-<!-- size="4.8" color="#202124"
-size="4.8" color="#202124"
-size="4.8" color="#202124" -->
+<!-- size="4.8" color="#202124" -->
