--- a/src/app/modules/home/container/home.component.html
+++ b/src/app/modules/home/container/home.component.html
@@ -47,6 +47,7 @@
 
 <section class="patrocinadores">
   <div class="container">
+    <!-- <p>Número: {{ numero | number: "1.1-1" }}</p> -->
     <ul>
       <li></li>
       <li></li>
@@ -59,12 +60,3 @@
     </ul>
   </div>
 </section>
-
-<!-- size="12.4" color="#202124"
-size="12.4" color="#202124"
-size="12.4" color="#202124"
-size="12.4" color="#202124"
-size="12.4" color="#202124"
-size="12.4" color="#202124"
-size="12.4" color="#202124"
-size="12.4" color="#202124" -->
