--- a/src/app/modules/cursos/containers/listar-cursos/listar-cursos.component.html
+++ b/src/app/modules/cursos/containers/listar-cursos/listar-cursos.component.html
@@ -14,8 +14,12 @@
         <span>{{ curso.descricao }}</span>
 
         <div slot="footer" class="icons">
-          <a *ngIf="!logged">SAIBA MAIS</a>
-          <a *ngIf="logged" routerLink=""><com-icon>info</com-icon></a>
+          <a *ngIf="!logged" routerLink="/cursos/detalhes/{{ curso.idCurso }}"
+            >SAIBA MAIS</a
+          >
+          <a *ngIf="logged" routerLink="/cursos/detalhes/{{ curso.idCurso }}"
+            ><com-icon>info</com-icon></a
+          >
           <a *ngIf="logged" routerLink="/cursos/deletar/{{ curso.idCurso }}"
             ><com-icon>delete</com-icon></a
           >
