--- a/src/app/modules/cursos/containers/listar-cursos/listar-cursos.component.scss
+++ b/src/app/modules/cursos/containers/listar-cursos/listar-cursos.component.scss
@@ -7,7 +7,7 @@
   .button {
     display: flex;
     justify-content: center;
-    margin-bottom: 3rem;
+    margin: 1rem 1rem 2rem 1rem;
   }
 
   ul {
