--- a/src/app/layout/nav/nav.component.scss
+++ b/src/app/layout/nav/nav.component.scss
@@ -12,11 +12,11 @@ nav {
     }
 
     a {
-      color: var(--lighter-grey);
+      color: #f1f4f8;
     }
 
     a:hover {
-      color: var(--light-grey);
+      color: #dadce0;
     }
   }
 }
