--- a/src/app/modules/contato/container/contato.component.scss
+++ b/src/app/modules/contato/container/contato.component.scss
@@ -1,17 +1,18 @@
-.container {
+.l-container {
   max-width: 1140px;
   padding: 3rem 0;
   margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .form {
-    width: 80%;
-    margin: 1rem;
-  }
-
-  .button {
-    margin-top: 2rem;
-  }
 }
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+
+//   .form {
+//     width: 80%;
+//     margin: 1rem;
+//   }
+
+//   .button {
+//     margin-top: 2rem;
+//   }
+// }
