--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: #234b90;
+  background-color: #3F51B5;
 
   .container {
     max-width: 1140px;
@@ -15,9 +15,9 @@
 
       h1 {
         font-size: 36px;
-        color: var(--lighter-grey);
+        color: #f1f4f8;
         text-transform: uppercase;
-        border: var(--lighter-grey) 2px solid;
+        border: #f1f4f8 2px solid;
         padding: 1rem;
       }
 
