--- a/src/app/modules/cursos/containers/detalhes-curso/detalhes-curso.component.html
+++ b/src/app/modules/cursos/containers/detalhes-curso/detalhes-curso.component.html
@@ -1,23 +1,24 @@
 <div class="container">
-  <div class="card">
-    <com-card [headerTitle]="curso.nome">
-      <span>
-        <p>{{ curso.codigoCnpq }}</p>
-        <p>{{ curso.descricao }}</p>
-        <p>{{ curso.disciplina }}</p>
-        <p>{{ curso.cargaHoraria }}</p>
-        <p>{{ curso.observacao }}</p>
-      </span>
-    </com-card>
-    <div class="icons">
-      <a *ngIf="logged" routerLink="/cursos/deletar/{{ curso.idCurso }}"
-        ><com-icon size="3.2" color="#202124">delete</com-icon></a
-      >
-      <a *ngIf="logged" routerLink="/cursos/editar/{{ curso.idCurso }}"
-        ><com-icon size="3.2" color="#202124">edit</com-icon></a
-      >
-    </div>
-  </div>
-</div>
+  <h1>{{ curso.nome }}</h1>
+  <p-fieldset legend="Header">
 
-<!-- size="4.8" color="#202124" -->
+    <p>{{ curso.codigo }}</p>
+
+    <p-divider></p-divider>
+
+    <p>{{ curso.descricao }}</p>
+
+    <p-divider></p-divider>
+
+    <p>{{ curso.disciplina }}</p>
+
+    <p-divider></p-divider>
+
+    <p>{{ curso.cargaHoraria }}</p>
+
+    <p-divider></p-divider>
+
+    <p>{{ curso.observacao }}</p>
+
+  </p-fieldset>
+</div>
