--- a/src/app/modules/login/container/login.component.html
+++ b/src/app/modules/login/container/login.component.html
@@ -1,26 +1,22 @@
-<div class="container">
-  <div class="form" [formGroup]="usuarioLogado">
-    <com-form>
-      <com-form-section block formTitle="Login">
-        <com-input
-          type="text"
-          style="width: 100%"
-          label="Usuário"
-          formControlName="user"
-        ></com-input>
-        <com-input
-          style="width: 100%"
-          label="Senha"
-          formControlName="senha"
-        ></com-input>
-      </com-form-section>
-      <com-form-section block>
-        <com-button fill form="formId" (click)="onSubmit()">
-          <ng-container slot="text">Entrar</ng-container>
-        </com-button>
-      </com-form-section>
-    </com-form>
+<div class="p-grid p-d-flex p-jc-center l-container">
+  <div class="p-fluid p-col-3">
+    <div class="p-field">
+      <span class="p-float-label">
+        <input id="usuario" type="text" pInputText>
+        <label for="usuario">Usuário</label>
+      </span>
+    </div>
+    <div class="p-field">
+      <span class="p-float-label">
+        <input id="senha" type="password" pPassword>
+        <label for="senha">Senha</label>
+      </span>
+    </div>
+    <div class="button">
+      <p-button label="Enviar" (click)="onSubmit()"></p-button>
+    </div>
   </div>
 </div>
 
-<!-- type="password" -->
+
+<!-- [formGroup]="usuarioLogado" -->
