--- a/src/app/modules/login/container/login.component.scss
+++ b/src/app/modules/login/container/login.component.scss
@@ -1,13 +1,13 @@
-.container {
+.l-container {
   max-width: 1140px;
   padding: 3rem 0;
   margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .form {
-    width: 50%;
-    margin: 1rem;
-  }
 }
+//   justify-content: center;
+//   align-items: center;
+
+//   .form {
+//     width: 50%;
+//     margin: 1rem;
+//   }
+// }
