--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-@import "~@cca-fab/cca-fab-components-common/styles.min.css";
+@import '../node_modules/primeicons/primeicons.css';
+@import '../node_modules/primeng/resources/themes/mdc-light-indigo/theme.css';
+@import '../node_modules/primeng/resources/primeng.min.css';
+@import '../node_modules/primeflex/primeflex.css';
+
+* {
+  padding:0;
+  margin:0;
+  vertical-align:baseline;
+  list-style:none;
+  border:0;
+  text-decoration: none;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
