--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,11 +1,11 @@
-<header class="header">
-  <div class="container">
-    <div class="header-logo">
+<header>
+  <div class="p-d-flex p-jc-between p-ai-center l-container">
+    <div class="l-container__logo">
       <a href="/">
         <h1>Teste</h1>
         <!-- <img src="/assets/png/juno-logo.png" /> -->
       </a>
     </div>
-    <div class="header-nav"><app-nav></app-nav></div>
+    <div class="l-container__nav"><app-nav></app-nav></div>
   </div>
 </header>
