--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,18 +1,12 @@
-.header {
-  background-color: #3F51B5;
+header {
+  background-color: #3f51b5;
 
-  .container {
+  .l-container {
     max-width: 1140px;
     padding: 3rem 0;
     margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
 
-    .header-logo {
-      margin: 1rem;
-
+    .l-container__logo {
       h1 {
         font-size: 36px;
         color: #f1f4f8;
@@ -24,10 +18,6 @@
       img {
         width: 150px;
       }
-    }
-
-    .header-nav {
-      margin: 1rem;
     }
   }
 }
