--- a/src/app/modules/contato/container/contato.component.scss
+++ b/src/app/modules/contato/container/contato.component.scss
@@ -2,17 +2,16 @@
   max-width: 1140px;
   padding: 3rem 0;
   margin: 0 auto;
+
+  h3 {
+    margin-bottom: 1.5rem;
+
+    &:not(:first-child) {
+      margin-top: 2rem;
+    }
+  }
+
+  .l-btn {
+    margin-top: 2rem;
+  }
 }
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-
-//   .form {
-//     width: 80%;
-//     margin: 1rem;
-//   }
-
-//   .button {
-//     margin-top: 2rem;
-//   }
-// }
