--- a/src/app/modules/cursos/containers/criar-curso/criar-curso.component.html
+++ b/src/app/modules/cursos/containers/criar-curso/criar-curso.component.html
@@ -1,37 +1,56 @@
-<div class="l-container">
-    <div class="p-fluid">
-      <div class="p-field" >
-        <label for="nome">Nome do curso</label>
-        <input id="nome" type="text" formControlName="nome" pInputText>
-      </div>
+<div class="p-grid p-d-flex p-jc-center">
+  <div class="p-flex-column p-col-5 l-container">
+    <form class="p-fluid" [formGroup]="curso">
 
-      <div class="p-field" >
-        <label for="codigo">Código do curso</label>
-        <input id="codigo" type="text" formControlName="codigo" pInputText>
+      <div class="p-field">
+        <span class="p-float-label">
+          <input id="nome" type="text" formControlName="nome" pInputText>
+          <label for="nome">Nome do curso</label>
+        </span>
       </div>
 
       <div class="p-field">
-        <p-dropdown [options]="disciplinas" placeholder="Selecione uma disciplina" formControlName="disciplina"></p-dropdown>
+        <span class="p-float-label">
+          <input id="codigo" type="text" formControlName="codigo" pInputText>
+          <label for="codigo">Código do curso</label>
+        </span>
       </div>
 
       <div class="p-field">
-        <label for="codigoCnpq">Código CNPQ</label>
-        <input id="codigoCnpq" type="text" formControlName="codigoCnpq" pInputText>
+        <span class="p-float-label">
+          <p-dropdown id="disciplina" [options]="disciplinas" formControlName="disciplina" [autoDisplayFirst]="false" optionLabel="name" [showClear]="true"></p-dropdown>
+          <label for="disciplina">Disciplina</label>
+        </span>
       </div>
 
       <div class="p-field">
-        <textarea rows="5" cols="30" pInputTextarea autoResize="autoResize" placeholder="Digite o Texto" formControlName="descricao"></textarea>
+        <span class="p-float-label">
+          <input id="codigoCnpq" type="text" formControlName="codigoCnpq" pInputText>
+          <label for="codigoCnpq">Código CNPQ</label>
+        </span>
       </div>
 
       <div class="p-field">
-        <p-dropdown [options]="cargasHorarias" placeholder="Selecione uma carga horária" formControlName="cargaHoraria"></p-dropdown>
+        <span class="p-float-label">
+          <textarea id="descricao" rows="5" cols="30" pInputTextarea autoResize="autoResize" formControlName="descricao"></textarea>
+          <label for="descricao">Descrição</label>
+        </span>
       </div>
 
-      <div class="buttons">
-        <p-button label="Criar" (click)="onSubmit()"></p-button>
-        <button pButton pRipple label="Cancelar" class="p-button-outlined" (click)="onCancel()"></button>
+      <div class="p-field">
+        <span class="p-float-label">
+          <p-dropdown id="cargaHoraria" [options]="cargasHorarias" formControlName="cargaHoraria" [autoDisplayFirst]="false" optionLabel="hours" [showClear]="true"></p-dropdown>
+          <label for="cargaHoraria">Carga horária</label>
+        </span>
       </div>
+
+    </form>
+
+    <div class="l-btn">
+      <p-button class="p-mr-1" label="Criar" (click)="onSubmit()"></p-button>
+      <p-button styleClass="p-button-link" label="Cancelar" (click)="onCancel()"></p-button>
     </div>
-  </div>
 
-  <!-- [formGroup]="curso" -->
+  </div>
+</div>
+
