--- a/src/app/modules/cursos/containers/editar-curso/editar-curso.component.scss
+++ b/src/app/modules/cursos/containers/editar-curso/editar-curso.component.scss
@@ -1,19 +1,9 @@
-.container {
-  padding: 3rem 6rem 3rem 6rem;
-  display: flex;
-  justify-content: center;
+.l-container {
+  max-width: 1140px;
+  padding: 3rem 0;
+  margin: 0 auto;
 
-  .form {
-    width: 60%;
-    margin: 1rem;
-  }
-
-  .buttons {
+  .l-btn {
     margin-top: 2rem;
-    display: inline-flex;
-
-    com-button {
-      margin-right: 1rem;
-    }
   }
 }
