--- a/src/app/modules/home/container/home.component.html
+++ b/src/app/modules/home/container/home.component.html
@@ -1,12 +1,15 @@
-<div class="banner">
-  <img src="assets/png/banner.png" />
-</div>
+<section>
+  <div class="l-banner">
+    <img src="assets/png/banner.png" />
+  </div>
+</section>
 
-<section class="reviews">
-  <div class="container">
-    <div class="review">
-      <div class="img"><img src="assets/png/profile.png" /></div>
-      <div class="text">
+<section class="l-light-section">
+  <div class="p-d-block l-container">
+
+    <div class="p-d-flex p-ai-center l-container__review">
+      <div class="l-container__img"><img src="assets/png/profile.png" /></div>
+      <div class="l-container__text">
         <h2>
           "A experiência com a Teste é incrível: a equipe consegue estar sempre
           atualizada sobre as novas tecnologias, agregar conhecimentos e se
@@ -16,9 +19,10 @@
         <h3>Roberto de Oliveira</h3>
       </div>
     </div>
-    <div class="review">
-      <div class="img"><img src="assets/png/profile.png" /></div>
-      <div class="text">
+
+    <div class="p-d-flex p-ai-center l-container__review">
+      <div class="l-container__img"><img src="assets/png/profile.png" /></div>
+      <div class="l-container__text">
         <h2>
           "Passei dois anos e meio desempregado e foi onde conheci os cursos da
           Teste. Consegui fazer uma mudança de carreira em uma área muito
@@ -29,9 +33,10 @@
         <h3>Victor Moreira</h3>
       </div>
     </div>
-    <div class="review">
-      <div class="img"><img src="assets/png/profile.png" /></div>
-      <div class="text">
+
+    <div class="p-d-flex p-ai-center l-container__review">
+      <div class="l-container__img"><img src="assets/png/profile.png" /></div>
+      <div class="l-container__text">
         <h2>
           "A plataforma é incrível. Além das metodologias do curso serem de
           alcance para quem está começando ou quem já está avançado em alguma
@@ -42,20 +47,21 @@
         <h3>Amanda Cardoso</h3>
       </div>
     </div>
+
   </div>
 </section>
 
-<section class="patrocinadores">
-  <div class="container">
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
+<section class="l-dark-section">
+  <div class="l-container">
+    <div class="p-grid l-container__patrocinadores">
+      <p-card class="p-d-inline p-col-3"></p-card>
+      <p-card class="p-d-inline p-col-3"></p-card>
+      <p-card class="p-d-inline p-col-3"></p-card>
+      <p-card class="p-d-inline p-col-3"></p-card>
+      <p-card class="p-d-inline p-col-3"></p-card>
+      <p-card class="p-d-inline p-col-3"></p-card>
+      <p-card class="p-d-inline p-col-3"></p-card>
+      <p-card class="p-d-inline p-col-3"></p-card>
+    </div>
   </div>
 </section>
