--- a/src/app/modules/cursos/containers/editar-curso/editar-curso.component.html
+++ b/src/app/modules/cursos/containers/editar-curso/editar-curso.component.html
@@ -19,7 +19,7 @@
 
       <div class="p-field">
         <span class="p-float-label">
-          <p-dropdown id="disciplina" [options]="disciplinas" formControlName="disciplina" [autoDisplayFirst]="false" optionLabel="name" [showClear]="true"></p-dropdown>
+          <p-dropdown id="disciplina" [options]="disciplinas" formControlName="disciplina" [autoDisplayFirst]="false" optionLabel="null" [showClear]="true"></p-dropdown>
           <label for="disciplina">Disciplina</label>
         </span>
       </div>
