--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="p-grid p-jc-between p-ai-center l-container">
     <div class="l-container__info">
-      <p><a href="mailto:faleconosco@teste.com">faleconosco@teste.com</a></p>
+      <p><a href="mailto:faleconosco@juno.com">faleconosco@juno.com</a></p>
       <p><a href="tel:5521999999999">(21) 99999-9999</a></p>
       <br />
       <p>22010-060 Ladeira do Ari Barroso, 876 - Leme</p>
@@ -10,18 +10,13 @@
     <div class="l-container__social">
       <ul>
         <li>
-          <a href="">
-            <i class="pi pi-facebook" style="font-size: 3rem"></i></a>
+          <a href=""> <i class="pi pi-facebook" style="font-size: 3rem"></i></a>
         </li>
         <li>
-          <a href="">
-            <i class="pi pi-twitter" style="font-size: 3rem"></i></a
-          >
+          <a href=""> <i class="pi pi-twitter" style="font-size: 3rem"></i></a>
         </li>
         <li>
-          <a href="">
-            <i class="pi pi-youtube" style="font-size: 3rem"></i></a
-          >
+          <a href=""> <i class="pi pi-youtube" style="font-size: 3rem"></i></a>
         </li>
       </ul>
     </div>
