--- a/src/app/modules/home/container/home.component.html
+++ b/src/app/modules/home/container/home.component.html
@@ -6,12 +6,11 @@
 
 <section class="l-light-section">
   <div class="p-d-block l-container">
-
     <div class="p-d-flex p-ai-center l-container__review">
       <div class="l-container__img"><img src="assets/png/profile.png" /></div>
       <div class="l-container__text">
         <h2>
-          "A experiência com a Teste é incrível: a equipe consegue estar sempre
+          "A experiência com a Juno é incrível: a equipe consegue estar sempre
           atualizada sobre as novas tecnologias, agregar conhecimentos e se
           aperfeiçoar. O acompanhamento mensal da equipe ajudou bastante, tanto
           como os relatórios gerenciais da plataforma."
@@ -25,10 +24,10 @@
       <div class="l-container__text">
         <h2>
           "Passei dois anos e meio desempregado e foi onde conheci os cursos da
-          Teste. Consegui fazer uma mudança de carreira em uma área muito
+          Juno. Consegui fazer uma mudança de carreira em uma área muito
           disputada e estou muito feliz: passei em um processo seletivo como
           Agente de Inovação, e muito do que aprendi tanto para a prova quanto
-          para a etapa presencial foi graças a Teste."
+          para a etapa presencial foi graças a Juno."
         </h2>
         <h3>Victor Moreira</h3>
       </div>
@@ -41,13 +40,12 @@
           "A plataforma é incrível. Além das metodologias do curso serem de
           alcance para quem está começando ou quem já está avançado em alguma
           tecnologia, no fórum de dúvidas sempre algum instrutor ou aluno te
-          responde em um curto espaço de tempo. Na Teste, seu conhecimento é
+          responde em um curto espaço de tempo. Na Juno, seu conhecimento é
           prioridade."
         </h2>
         <h3>Amanda Cardoso</h3>
       </div>
     </div>
-
   </div>
 </section>
 
